--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -42,9 +42,17 @@ echo "A reload of .bashrc might be needed, use . ~/.bashrc"
 
 #!/bin/bash
 
+if [ ! -f ~/.docker/cli-plugins/docker-scout ]; then
+    curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s --
+fi
+
 tenv tf install 1.9.5
 tenv tg install 0.66.7
 tenv tofu install 1.8.1
 #vagrant plugin install vagrant-vmware-desktop
+
+volta install node@20
+volta install pnpm@8.6.2
+volta install yarn
 
 {{ end -}}
