--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -46,6 +46,10 @@ if [ ! -f ~/.docker/cli-plugins/docker-scout ]; then
     curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s --
 fi
 
+pipx install ansible
+pipx install shcheck.py
+pipx install keepercommander
+
 tenv tf install 1.9.5
 tenv tg install 0.66.7
 tenv tofu install 1.8.1
@@ -54,5 +58,4 @@ tenv tofu install 1.8.1
 volta install node@20
 volta install pnpm@8.6.2
 volta install yarn
-
 {{ end -}}
