update some settings

--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -32,3 +32,6 @@ export PATH="$VOLTA_HOME/bin:$PATH"
 export VOLTA_FEATURE_PNPM=1;
 # Lucera blog contentfull
 export BLOG_PROVIDER=local
+
+# Required by k9s and probably other tools
+export EDITOR='nvim'
