--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -17,7 +17,6 @@ install_pipx_package keeper keepercommander
 # snap packages
 sudo snap install terraform --classic
 
-
 # brew packages
 install_brew_package k9s
 install_brew_package pulumi
@@ -29,7 +28,6 @@ install_brew_package inframap
 
 # Install dotnet
 install_dotnet_version "6.0.423" "8.0.301" # "8.0.206"
-
 
 # Install gitkraken
 wget https://release.gitkraken.com/linux/gitkraken-amd64.deb
@@ -43,11 +41,11 @@ echo "A reload of .bashrc might be needed, use . ~/.bashrc"
 #!/bin/bash
 
 if [ ! -f ~/.docker/cli-plugins/docker-scout ]; then
-    curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s --
+  curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s --
 fi
 
-pipx install ansible
-pipx install shcheck.py
+pipx install --include-deps ansible
+pipx install shcheck
 pipx install keepercommander
 
 tenv tf install 1.9.5
