update various files

--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -50,7 +50,7 @@ pipx install keepercommander
 pipx install molecule
 pipx inject molecule "molecule-plugins"
 
-tenv tf install 1.9.5
+tenv tf install --arch=amd64 1.9.5
 tenv tg install 0.66.7
 tenv tofu install 1.8.1
 #vagrant plugin install vagrant-vmware-desktop
