--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -50,9 +50,9 @@ pipx install keepercommander
 pipx install molecule
 pipx inject molecule "molecule-plugins"
 
-tenv tf install --arch=amd64 1.9.5
+tenv tf install --arch=amd64 1.10.2
 tenv tg install 0.66.7
-tenv tofu install 1.8.1
+tenv tofu install 1.9.0-rc1
 #vagrant plugin install vagrant-vmware-desktop
 
 volta install node@20
