--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -18,6 +18,7 @@ for kubeconfig in ~/.kube/config.d/*; do
   KUBECONFIG=${KUBECONFIG}:$kubeconfig
 done
 export KUBECONFIG
+export K9S_CONFIG_DIR="{{ .chezmoi.homeDir }}/.config/k9s/"
 
 export HELM_REGISTRY_CONFIG="${HOME}/.docker/config.json"
 
