force installation of opentofu with arch amd64

--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -52,7 +52,7 @@ pipx inject molecule "molecule-plugins"
 
 tenv tf install --arch=amd64 1.10.5
 tenv tg install 0.66.7
-tenv tofu install 1.9.0-rc1
+tenv tofu install --arch=amd64 1.9.0
 #vagrant plugin install vagrant-vmware-desktop
 
 volta install node@20
