--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -44,7 +44,8 @@ if [ ! -f ~/.docker/cli-plugins/docker-scout ]; then
   curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s --
 fi
 
-pipx install --include-deps ansible
+#pipx install --include-deps ansible
+pipx install --include-deps ansible==9.13.0
 pipx install shcheck # check http headers
 pipx install keepercommander
 pipx install molecule
