--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -1,5 +1,5 @@
 {{- if eq .chezmoi.os "darwin" -}}
-{{-   template "macos/zshrc.tmpl" . -}}
+{{-   template "macos/bashrc.tmpl" . -}}
 {{- else if eq .chezmoi.os "linux" -}}
 {{-   template "linux/bashrc.tmpl" . -}}
 {{- end -}}
