--- a/run_onchange_install-brewfiles.sh.tmpl
+++ b/run_onchange_install-brewfiles.sh.tmpl
@@ -1,6 +1,5 @@
 {{ if eq .chezmoi.os "darwin" -}}
 #!/bin/bash
 # dot_brewfile" hash: {{ include "dot_brewfile" | sha256sum }}
-brew tap homebrew/bundle
-brew bundle
+brew bundle || exit 0
 {{ end -}}
