--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,8 +1,10 @@
 [user]
-	name = Marvin
-	email = 32611659+msxdan@users.noreply.github.com
-	signingKey = FEA69F13D22379FE2ACC92D5969A63AC9C25D73A
+    name = Marvin
+    email = 32611659+msxdan@users.noreply.github.com
+    signingKey = FEA69F13D22379FE2ACC92D5969A63AC9C25D73A
 [init]
-	defaultBranch = main
+    defaultBranch = main
 [commit]
-	gpgsign = true
+    gpgsign = true
+[core]
+    excludesfile = {{ .chezmoi.homeDir }}/.global.gitignore
