--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -65,4 +65,8 @@ volta install yarn
 
 # OPEN CODE
 curl -fsSL https://opencode.ai/install | bash
+
+# Reversing tools
+pipx install apkid
+
 {{ end -}}
