update terraform config and pipx load before pyenv

--- a/dot_zprofile.tmpl
+++ b/dot_zprofile.tmpl
@@ -6,7 +6,7 @@ export VIRTUAL_ENV_DISABLE_PROMPT=1
 eval "$(pyenv init -)"
 
 # Export pipx binary directory
-export PATH="$PATH:{{ .chezmoi.homeDir }}/.local/bin"
+export PATH="{{ .chezmoi.homeDir }}/.local/bin:$PATH"
 
 export GOENV_ROOT="$HOME/.goenv"
 export PATH="$GOENV_ROOT/bin:$PATH"
