--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -16,6 +16,9 @@ export TENV_AUTO_INSTALL=true
 # Use terraform as default for terragrunt
 export TERRAGRUNT_TFPATH="terraform"
 
+export TF_CLI_ARGS_apply="-parallelism=40"
+export TF_CLI_ARGS_plan="-parallelism=40"
+
 # Create kubeconfig symlink for existing kubeconfigs in ~/.private/.kube/config.d
 for private_kube_config in ~/.private/.kube/config.d/*; do
   KUBE_FILE="$HOME/.kube/config.d/$(basename $private_kube_config)"
