add latest changes

--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -66,6 +66,9 @@ volta install yarn
 # OPEN CODE
 curl -fsSL https://opencode.ai/install | bash
 
+# Agent OS
+curl -sSL https://raw.githubusercontent.com/buildermethods/agent-os/main/scripts/base-install.sh | bash
+
 # Reversing tools
 pipx install apkid
 
