--- a/dot_zprofile.tmpl
+++ b/dot_zprofile.tmpl
@@ -1,9 +1,12 @@
 eval "$(/opt/homebrew/bin/brew shellenv)"
 
 export PYENV_ROOT="$HOME/.pyenv"
-[[ -d $PYENV_ROOT/bin ]] && export PATH="$PYENV_ROOT/bin:$PATH"
+[[ -d $PYENV_ROOT/bin ]] && export PATH="$PATH:$PYENV_ROOT/bin"
 export VIRTUAL_ENV_DISABLE_PROMPT=1
 eval "$(pyenv init -)"
+
+# Export pipx binary directory
+export PATH="{{ .chezmoi.homeDir }}/.local/bin:$PATH"
 
 export GOENV_ROOT="$HOME/.goenv"
 export PATH="$GOENV_ROOT/bin:$PATH"
@@ -14,3 +17,9 @@ export PATH="$PATH:$GOPATH/bin"
 # Added by OrbStack: command-line tools and integration
 # Comment this line if you don't want it to be added again.
 source ~/.orbstack/shell/init.zsh 2>/dev/null || :
+
+# opencode
+export PATH="{{ .chezmoi.homeDir }}/.opencode/bin:$PATH"
+
+# Add .NET Core SDK tools
+export PATH="$PATH:{{ .chezmoi.homeDir }}/.dotnet/tools"
