--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -44,16 +44,16 @@ if [ ! -f ~/.docker/cli-plugins/docker-scout ]; then
   curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s --
 fi
 
-#pipx install --include-deps ansible
 pipx install --include-deps ansible==10.7.0
+
 pipx install shcheck # check http headers
 pipx install keepercommander
 pipx install molecule
 pipx inject molecule "molecule-plugins"
 
-tenv tf install --arch=amd64 1.12.0
+tenv tf install --arch=amd64 1.13.1
 tenv tg install 0.66.7
-tenv tofu install --arch=amd64 1.9.0
+tenv tofu install --arch=amd64 1.10.6
 #vagrant plugin install vagrant-vmware-desktop
 
 goenv install 1.24.4
@@ -62,4 +62,14 @@ goenv global 1.24.4
 volta install node@20
 volta install pnpm@8.6.2
 volta install yarn
+
+# OPEN CODE
+curl -fsSL https://opencode.ai/install | bash
+
+# Agent OS
+curl -sSL https://raw.githubusercontent.com/buildermethods/agent-os/main/scripts/base-install.sh | bash
+
+# Reversing tools
+pipx install apkid
+
 {{ end -}}
